# crop-disease-detection

mobile/app/: build.gradle.kts
mobile/app/src/main/java/com/example/mobile/: HeatmapGenerator.kt  MainActivity.kt  PlantDiseaseClassifier.kt
mobile/app/src/main/java/com/example/mobile/ui/theme/: Color.kt  Theme.kt
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
pc/: next.config.ts  package-lock.json  package.json
pc/src/app/: globals.css  layout.tsx  page.tsx
pc/src/app/components/: HeatmapViewer.tsx  ImageUploader.tsx  RecommendationPanel.tsx  ResultCard.tsx  SeverityGauge.tsx
pc/src/app/lib/: gradcam.ts  inference.ts  labels.ts  recommendations.ts
training/: pyproject.toml
training/configs/: default.yaml
training/scripts/: download_dataset.py
training/src/: __init__.py  dataset.py  evaluate.py  export_ncnn.py  export_onnx.py  gradcam.py  model.py  train.py  utils.py
