[project]
name = "training"
version = "0.1.0"
description = "Explainable Multi-Task Plant Disease Detection & Severity Estimation Training Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Deep Learning
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "timm>=1.0.16",

    # Image Processing & Augmentation
    "albumentations>=1.4.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",

    # Metrics & Evaluation
    "scikit-learn>=1.5.0",

    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Config & Utilities
    "pyyaml>=6.0",
    "tqdm>=4.66.0",

    # Training Monitoring
    "tensorboard>=2.17.0",

    # ONNX Export & Validation
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxsim>=0.4.36",

    # Dataset Download
    "kagglehub>=0.3.0",
]

[tool.uv]
# Use PyTorch CUDA index for GPU support
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
